--- a/class.tex
+++ b/class.tex
@@ -1922,16 +1922,8 @@ on dimension 3 LV terms
 % first line
 \nonumber
 	\mathcal{L}_{\rm SM\ 1~GeV}^{\rm lepton} & ~~=~~ %\hspace{-2.0cm}&
-	c_l^\mu \cdot
-	\ov{\psi}\, \gamma^{\lambda} F_{\mu\lambda}\, \psi
-	~~+~~
-	c_{l,5}^\mu \cdot
-	\ov{\psi}\, \gamma^{\lambda}\gamma^5 F_{\mu\lambda}\, \psi
-	\\
 % third line
 \label{SM_lepton_1GeV}
-	&
-	+~~
 	C_l^{\mu\nu\rho} \cdot
 	\ov{\psi}\, \gamma_{(\mu} \md_\nu \md_{\rho)}\, \psi
 	~~+~~
@@ -2026,6 +2018,8 @@ $ C^{\mu\nu\rho}_\el $
 	The second group, correspondingly, hosts all other
 	structures, which we designate as ``soft'' LV interactions  
 	(see Table \ref{constr_table}).
+	We now outline the main sources of constraints applicable to these groups of 
+	low-energy LV interactions.
 
 %%
 %% the table of typical phenomenological constraints on the operators
@@ -2076,13 +2070,42 @@ $ C^{\mu\nu\rho}_\el $
 \hline
 \end{tabular}
 \end{table}
-
-	We outline the main sources of constraints applicable to the low-energy 
-	LV interactions.
 	
-	--- {\it Ultra-high energy cosmic rays}. 
-
-	--- {\it Precision experiments}. 
+	{\it Ultra-high energy cosmic rays}. 
+	The existence of high-energy cosmic rays of energies $ E_{max} \sim 10^{12}~\GeV $ puts
+	stringent bounds on UV-enhanced operators in certain sectors of the Standard Model, 
+	depending on relative magnitude of LV sources in these sectors
+	\cite{Gagnon:2004xh}. 
+	Renormalization group equations (see Appendix \ref{RG_SM}) then spread these limits on other sectors.
+	The UV-enhanced operators modify the dispersion relations of the particles, and this would 
+	allow the nucleons in the cosmic rays to emit photons or light leptons, and therefore
+	efficiently  lose all their energy before reaching the Earth. 
+	The fact of observation of high-energy cosmic rays sets typical constraints on UV-enhanced
+	LV of the order of $ 10^{-33-34}~\GeV $. 
+	Not all ``corners'' of the parameter space of UV-enhanced operators are covered by these
+	limits.
+	Sufficiently strong LV in the up quark sector would allow protons of the cosmic
+	rays to decay into $ \Delta^{++} $ which would be stable at high energies
+	\cite{Gagnon:2004xh}.
+	
+	{\it Precision experiments}. 
+	Astrophysical constraints are not applicable to soft LV interactions, since the latter do not
+	modify propagation of particles.
+	For this type interactions the bounds from low-energy precision experiments are applicable.
+	The strongest limits occur when an operator induces the interaction 
+	of nuclear spin with the nuclear electric field, typical scale of which
+	in heavy nuclei can reach $ \sim (50~{\rm MeV})^2 $.
+	Known limits 
+\cite{Adelberger:1998ew} 
+	on such interactions allow one to estimate typical constraints on operators 
+$ c^\mu_{q,5} $, $ D^{\mu\nu\rho}_{q,5} $ as
+\cite{Bolokhov:2005cj}:
+\begin{equation}
+\label{nucl_spin}
+	|c^\mu_{q,5}|,~~ |D^{\mu\nu\rho}_{q,5}| ~~\lesssim~~~
+	10^{-28}~{\rm GeV}^{-1}~.
+\end{equation}
+	
 
 	--- {\it Electric dipole moments}. 
 
