my final - final revision. Maxim has one more to edit though.

--- a/class.tex
+++ b/class.tex
@@ -272,7 +272,7 @@ the Lorentz group. It would be fair to say that the dynamical breaking of Lorent
 invariance is difficult to achieve in a consistent UV-complete theory, and most of the 
 papers studying LV shy away from this issue. 
  Nevertheless, the spurion or the effective field theory approach has been instrumental in 
-comparing the sensitivty of various LV tests. 
+comparing the sensitivity of various LV tests. 
 	
 If the generation of interaction \eqref{start} is a true UV phenomenon, it proves extremely useful 
 to classify all operators of lowest dimensions coupled to a given spurion field $	C^{\mu\nu...}$.
@@ -423,7 +423,7 @@ tests of Lorentz violation.
 
 \section{Dimension 5 Operators in QED}
 
-	in order to build a Lorentz-violating extension of QED, we tak an approach
+	In order to build a Lorentz-violating extension of QED, we take an approach
 	similar to Myers-Pospelov electrodynamics
 \cite{MP:}.
 %	We start with a toy model of Lorentz-violating extension of Quantum
@@ -457,7 +457,7 @@ Our intention is to classify {\it all} dimension five operators in
 necessarily be expanded. 
 	Generic operators will produce new non-minimal interactions between
 	the electron and the photon. 
-	The LV extension of the photon sector of QED appears to be the most rather simple, whereas
+	The LV extension of the photon sector of QED appears to be the most simple, whereas
 	the matter sector shows a rich structure of LV terms.
 %	We avoid the danger of quadratic divergencies by inhibiting operators
 %	which can potentially develop them.
@@ -573,7 +573,7 @@ one needs to separate it from all
 	$ g^{\mu\nu} $ and $ \epsilon^{\mu\nu\rho\sigma} $ 
 	traces of this term, and {\it then} substitute it into the
 	equations of motion.
-	Upon such reduction, this operator is completely expressible
+	It turns out that this operator is completely expressible
 	in terms of its $ \epsilon^{\mu\nu\rho\sigma} $-trace, which
 	coincides with the operator $ C^{\mu\nu\rho} $:
 %	in terms of the $ C^{\mu\nu\rho} $ operator and of
@@ -804,7 +804,7 @@ majority of tests is performed. For this purpose, we study
 	\eqref{QED_gauge} and \eqref{QED_matter}.
 	The RG runninng brings about the change in 
     the magnitude of Wilson coefficients 
-    and mxing of different operators.
+    and mixing of different operators.
 %	In our case we will ensure that the irreducible operators
 %	also provide a convenient basis for using the RG flow.
 %	Nevertheless, QED is only an example theory and we do not
@@ -1106,7 +1106,7 @@ sectors of the SM.
 	Due to chirality of both leptons and quarks, the structures 
 	with an even number of $ \gamma $-matrices in \eqref{QED_matter}
 	are not $ \sul $-gauge invariant. 
-	That greatly simplifies the structure of the LV lagrangian,
+	That greatly simplifies the structure of the LV Lagrangian,
 	as one can only have operators with an odd number of gamma
 	matrices.
 	In the resulting Lagrangian we have to abandon the $C$-parity eigenstates, 
@@ -1132,7 +1132,7 @@ sectors of the SM.
 	i\, g_3\, G_{\mu\nu}~,
 \end{equation}
 	where $ Y $ is the hypercharge of the quark.
-	The use of equatios of motino allows then to express one of the operators 
+	The use of equations of motion allows then to express one of the operators 
 $ \ov{Q}\, \gamma^\lambda F_{\mu\lambda} Q~ $,
 $ \ov{Q}\, \gamma^\lambda W_{\mu\lambda} Q~ $ and
 $ \ov{Q}\, \gamma^\lambda G_{\mu\lambda} Q $
@@ -2041,8 +2041,8 @@ $ C^{\mu\nu\rho}_\el $
 %%
 %% the table of typical phenomenological constraints on the operators
 \begin{table}[tb]
-\label{constr_table}
 \caption{Typical constraints for dimension five operators}
+\label{constr_table}
 \begin{tabular}{|ccc|}
 \hline
 	\multicolumn{1}{|c|}{Operators} & 
@@ -2106,7 +2106,7 @@ $ C^{\mu\nu\rho}_\el $
 	allow the nucleons in the cosmic rays to emit photons or light leptons, and therefore
 	efficiently  lose all their energy before reaching the Earth. 
 	The fact of observation of high-energy cosmic rays sets typical constraints on UV-enhanced
-	LV of the order of $ 10^{-33-34}~\GeV $. 
+	LV of the order of $ 10^{-33-34}~\GeV^{-1} $. 
 	Not all ``corners'' of the parameter space of UV-enhanced operators are covered by these
 	limits.
 	Sufficiently strong LV in the up quark sector would allow protons in the cosmic
@@ -2298,11 +2298,16 @@ $ C^{\mu\nu\rho}_\el $
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusion}
-	We have presented a generic Lorentz-violating extension of 
-	Quantum Electrodynamics and the Standard Model with dimension five operators.
+	We have presented a systematic Lorentz-violating extension of 
+	Quantum Electrodynamics and the Standard Model 
+	with all dimension five operators.
+	Quantum Electrodynamics is the simplest phenomenological example
+	to consider:
+	in some sense QED is what we can see of the Standard Model at very 
+	low energies. 
 %	We have presented an example of a generic Lorentz-violating 
 %	extension of a theory. 
-	It has been shown that QED admits a plenty of interactions,
+	It has been shown that QED admits a plenty of LV interactions,
 	parametrized by background vectors and tensors.
 	Exploration of some of the operators was done earlier
 \cite{MP:,Gagnon:2004xh}.
@@ -2317,11 +2322,11 @@ $ C^{\mu\nu\rho}_\el $
 	We show that the method of irreducible tensors, which itself is a systematic
 	tool for building a theory, appears useful for these purposes too.
 
-	QED left as a toy model,
+%	QED left as a toy model,
 %	However, 
-	the accent of this paper was mainly put on the Standard Model 
+	The accent of this paper was mainly put on the Standard Model 
 	domain.
-	The wider gauge group, and the diversity of field content lead
+	Certainly, the wider gauge group and the diversity of field content lead
 	to a sufficiently broader set of LV structures, although the gauge
 	sector still keeps its simplicity.
 %	The field content essentially reduces below the EW scale,
@@ -2356,10 +2361,10 @@ $ C^{\mu\nu\rho}_\el $
 
 	Due to the rich field content of the Standard Model,
 %	Although the Standard Model is now out of fashion, we observe that 
-	the spectrum of LV interactions is one of the widest.
+	the choice of applicable LV interactions is very wide. 
 	At the same time, due to experimental accessibility of the
-	former, analysis of the LV operators in the
-	Standard Model is directly related to observational constraints.
+	Standard Model, analysis of the LV operators is directly connected to 
+	observational constraints.
 %	Reversely, in more abstract theories, we can expect
 %	that any extension of the Standard Model, should it possess
 %	LV properties, in the low energy regime will always be described
@@ -2369,7 +2374,7 @@ $ C^{\mu\nu\rho}_\el $
 	({\it e.g.} in those arising from non-commutative models or from quantum gravity),
 	if they appeal for phenomenological
 	viability, we can expect that the LV behavior in the low energy regime will 
-	always be described by some of the operators we have built.
+	always be described by the operators we have built.
 
 
 \newpage
